<resources>
    <string name="app_name">ShippingCalculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_setting">Settings</string>
    <string name="weightLBL">Enter the weight of\none package</string>
    <string name="ouncesLBL">(in ounces)</string>
    <string name="baseLBL">Base Cost Each:</string>
    <string name="addCostLBL">Added Cost Each:</string>
    <string name="totalLBL">Total Shipping Cost:</string>
    <string name="zeroDec">$0.00</string>
    <string name="zero">0</string>
    <string name="num_pack">Number of packages</string>
    <string name="subtotalLBL">Subtotal:</string>
    <string name="one">1</string>
</resources>
