<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shippingbck"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.annguyendang14.shippingcalculator.MyActivity">

    <TextView
        android:id="@+id/textView0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/num_pack"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView0"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/one"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textSize="35sp">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText0"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/weightLBL"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/zero"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textSize="35sp">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText1"
        android:layout_centerHorizontal="true"
        android:text="@string/ouncesLBL"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/editText1"
        android:layout_marginTop="40dp"
        android:paddingLeft="@dimen/output_margin_buffer"
        android:text="@string/baseLBL"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textView3"
        android:layout_alignBottom="@id/textView3"
        android:layout_alignParentRight="true"
        android:paddingRight="@dimen/output_margin_buffer"
        android:text="@string/zeroDec"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/textView3"
        android:paddingLeft="@dimen/output_margin_buffer"
        android:text="@string/addCostLBL"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textView5"
        android:layout_alignBottom="@id/textView5"
        android:layout_alignParentRight="true"
        android:paddingRight="@dimen/output_margin_buffer"
        android:text="@string/zeroDec"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/textView5"
        android:paddingLeft="@dimen/output_margin_buffer"
        android:text="@string/subtotalLBL"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textView7"
        android:layout_alignBottom="@id/textView7"
        android:layout_alignParentRight="true"
        android:paddingRight="@dimen/output_margin_buffer"
        android:text="@string/zeroDec"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/textView7"
        android:paddingLeft="@dimen/output_margin_buffer"
        android:text="@string/totalLBL"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textView9"
        android:layout_alignBottom="@id/textView9"
        android:layout_alignParentRight="true"
        android:paddingRight="@dimen/output_margin_buffer"
        android:text="@string/zeroDec"
        android:textAppearance="?android:attr/textAppearanceMedium" />




</RelativeLayout>
